---------------------------------------------------------------------------------------------------
Version: 1.3.10
Date: ????
  Changes:
    - Update Nullius preset to account for boxed versions of milestones in the "Resources" group (ingots, processors, glass).
    - GUI improvements:
      - Improve the look of the scroll bars that appear when using large milestones set.
      - Milestones from different groups are now aligned properly.

---------------------------------------------------------------------------------------------------
Version: 1.3.9
Date: 2022-10-19

  Changes:
    - Update PyMods presets to account for changes in the latest PyMods versions. 
      Now comes with 4 presets depending on how many PyMods you are using: Full, Full except AE, Medium, and Short.
      As usual you will need to refresh your milestone set yourself if you are already in the middle of a PyMods playthrough (Settings -> Switch to Empty -> Switch to the preset you want -> Confirm).
    - Add preset addon for Fluidic Power (Thanks to stringweasel)

---------------------------------------------------------------------------------------------------
Version: 1.3.8
Date: 2022-09-13

  Features:
    - Add beta support for item aliases. You can indicate to Milestones that an item is worth a certain amount of another item.
      - This is designed for Nullius's science, which can be created individually or as a "box" item worth several science packs. Up until now the Nullius milestones were not accurate because of these 2 ways to create science.
      - For now there is no way to create aliases via the settings GUI. You can modify aliases using the export/import feature.
    - Add mod setting to hide the "±Xm" estimations.

  Changes:
    - Update Nullius preset to use aliases for science boxes. If you are already using the Nullius preset, you can update it in the settings (Switch to "Empty" preset, switch back to "Nullius", confirm).