@@ -69,6 +69,7 @@ settings_add_group=Add Group
 settings_quantity_tooltip=Quantity
 settings_infinity_button_tooltip=Infinite milestone: Completing this milestone will create a new one with a higher quantity.
 settings_next_textfield_tooltip=Formula for the next milestone. Example: "x10" or "+5".
+settings_arrow_tooltip=__CONTROL_STYLE_BEGIN__Shift-click__CONTROL_STYLE_END__ to move 5 at a time.
 
 message_loaded_presets=[img=milestones_main_icon_white] [font=default-large-bold]Milestones[/font] is using the auto-detected preset: [color=green]__1__[/color]. Change it in the settings (__CONTROL__milestones_toggle_gui__).
 message_loaded_initial_preset=[img=milestones_main_icon_white] [font=default-large-bold]Milestones[/font] successfully loaded the preset from Mod Settings.
