@@ -4,8 +4,9 @@ Date: ????
   Changes:
     - Update Nullius preset to account for boxed versions of milestones in the "Resources" group (ingots, processors, glass).
     - GUI improvements:
-      - Improve the look of the scroll bars that appear when using large milestones set.
       - Milestones from different groups are now aligned properly.
+      - Improve the look of the scroll bars that appear when using large milestones set.
+      - You can now shift-click arrows on the settings page to move 5 places at a time.
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.9
